// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      <h3>
        Expenses
      </h3>
    </div>
    <div
      className="show-for-desktop"
    >
      <h3>
        Expense
      </h3>
    </div>
    <div
      className="show-for-desktop"
    >
      <h3>
        Amount
      </h3>
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseItem
      amount={150}
      createdAt={0}
      description="Office supplies"
      id={1}
      key="1"
      note=""
    />
    <ExpenseItem
      amount={2000}
      createdAt={-345600000}
      description="Lunch"
      id={2}
      key="2"
      note=""
    />
    <ExpenseItem
      amount={35000}
      createdAt={345600000}
      description="Car lease"
      id={3}
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render ExpenseList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      <h3>
        Expenses
      </h3>
    </div>
    <div
      className="show-for-desktop"
    >
      <h3>
        Expense
      </h3>
    </div>
    <div
      className="show-for-desktop"
    >
      <h3>
        Amount
      </h3>
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list_item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
